<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_main">

    <FrameLayout
        android:id="@+id/main_two_screen_parent"
        android:layout_width="match_parent"
        android:layout_height="match_parent"/>

    <ImageView
        android:id="@+id/main_two_end_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/end"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_two_end" />

    <ImageButton
        android:id="@+id/main_two_pause_img_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="35dp"
        android:background="@color/transparent"
        android:contentDescription="@string/pause"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_two_pause" />

    <ImageView
        android:id="@+id/main_two_best_score_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/best_score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_main_two_best_score" />

    <TextView
        android:id="@+id/main_two_best_result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:textColor="@color/white"
        android:textSize="19sp"
        app:layout_constraintStart_toEndOf="@+id/main_two_best_score_img"
        app:layout_constraintTop_toTopOf="@+id/main_two_best_score_img"
        tools:text="569" />

    <ImageView
        android:id="@+id/main_two_score_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="18dp"
        android:contentDescription="@string/score"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/main_two_best_score_img"
        app:srcCompat="@drawable/ic_main_two_score" />

    <TextView
        android:id="@+id/main_two_result_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/font"
        android:textColor="@color/white"
        android:textSize="24sp"
        app:layout_constraintStart_toEndOf="@+id/main_two_score_img"
        app:layout_constraintTop_toTopOf="@+id/main_two_score_img"
        tools:text="569" />

    <View
        android:id="@+id/main_two_lower_dolphin_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/game_horizontal_dolphin_guideline" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/game_horizontal_dolphin_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <View
        android:id="@+id/main_two_lower_threshold_view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/transparent"
        app:layout_constraintBottom_toTopOf="@+id/game_horizontal_bottom_guideline" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/game_horizontal_bottom_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.95" />

    <ImageView
        android:id="@+id/main_two_dolphin_img"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:contentDescription="@string/dolphin"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/ic_main_two_dolphin" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/game_vertical_right_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.98" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/game_vertical_left_guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.02" />
</androidx.constraintlayout.widget.ConstraintLayout>